RESOLVED FIXED217356
MobileSafari crashes at WebCore: -[WebAVPlayerViewControllerDelegate playerViewControllerWillStartPictureInPicture:]
https://bugs.webkit.org/show_bug.cgi?id=217356
Summary MobileSafari crashes at WebCore: -[WebAVPlayerViewControllerDelegate playerVi...
Peng Liu
Reported 2020-10-05 17:45:27 PDT
MobileSafari crashes at WebCore: -[WebAVPlayerViewControllerDelegate playerViewControllerWillStartPictureInPicture:]
Attachments
Patch (4.92 KB, patch)
2020-10-05 17:53 PDT, Peng Liu
achristensen: review+
ews-feeder: commit-queue-
Patch for landing (4.80 KB, patch)
2020-10-05 20:20 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-10-05 17:49:33 PDT
Peng Liu
Comment 2 2020-10-05 17:53:56 PDT
Alex Christensen
Comment 3 2020-10-05 18:48:24 PDT
Comment on attachment 410596 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=410596&action=review > Source/WebCore/platform/ios/VideoFullscreenInterfaceAVKit.mm:181 > } else return YES;
Peng Liu
Comment 4 2020-10-05 19:30:28 PDT
Comment on attachment 410596 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=410596&action=review >> Source/WebCore/platform/ios/VideoFullscreenInterfaceAVKit.mm:181 >> } > > else > return YES; Yes! Will fix it. Thanks!
Peng Liu
Comment 5 2020-10-05 20:20:04 PDT
Created attachment 410604 [details] Patch for landing
EWS
Comment 6 2020-10-05 22:32:21 PDT
Committed r268035: <https://trac.webkit.org/changeset/268035> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410604 [details].
Note You need to log in before you can comment on or make changes to this bug.